# rust-notes-rest

./: Cargo.toml  docker-compose.yml
src/: handler.rs  main.rs  model.rs  route.rs  schema.rs
